test_data/Xml/Unexpected/Unserializable/InvalidClassName/entity/wrong.xml.exception
Expected an element representing an instance of class Entity with element name entity, but got: utterlyInvalid at: the beginning